still working on message functionality also adited the checkout page to send city input, adited the views checkout function to send the requested data to the service - stil need to work on the notification showing functionality

--- a/ariExpressDjango/mainApp/templates/checkoutpage.html
+++ b/ariExpressDjango/mainApp/templates/checkoutpage.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" placeholder="1234 Main St" required>
+                        <input type="text" class="form-control" id="address" name="address" placeholder="94 Saint Jhon's" required>
                     </div>
 
                     <div class="row">
@@ -98,16 +98,20 @@
                             </select>
                         </div>
                         <div class="col-md-4 mb-3">
-                            <label for="state">State</label>
-                            <select class="custom-select d-block w-100" id="state" name="state">
+                            <label for="city">City</label>
+                            <select class="custom-select d-block w-100" id="city" name="city">
                                 <option value="">Choose...</option>
                                 <option>---</option>
-                                <option>California</option>
+                                <option>Beer Sheva</option>
+                                <option>Hulon</option>
+                                <option>Tel-Aviv</option>
+                                <option>Ma'alot-Tarshiha</option>
+                                <option>Tarqumiyah</option>
                             </select>
                         </div>
                         <div class="col-md-3 mb-3">
                             <label for="zip">Zip</label>
-                            <input type="text" class="form-control" id="zip" name="zip" placeholder="">
+                            <input type="text" class="form-control" id="zip" name="zip" placeholder="" required>
                         </div>
                     </div>
                     <hr class="mb-4">
