--- a/ariExpressDjango/mainApp/templates/addNewDiscount.html
+++ b/ariExpressDjango/mainApp/templates/addNewDiscount.html
@@ -101,9 +101,9 @@
 				<div class="card-body">
 					<select class="form-select mb-3" aria-label="Default select example" name="ruleType">
 						<option selected disabled>Rule Type</option>
-						<option value="1">Basket total price</option>
-						<option value="2">Amount of product</option>
-						<option value="3">Amount of category</option>
+						<option value="basket_total_price">Basket total price</option>
+						<option value="amount_of_product">Amount of product</option>
+						<option value="amount_of_category">Amount of category</option>
 					</select>
 					<div class="form-floating mb-3">
 						<input type="text" class="form-control" id="floatingInput" name="ruleProductName">
