--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -1,4 +1,5 @@
-
+{% load static i18n %}
+{% load notifications_tags %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://kit.fontawesome.com/a46df6f46f.js" crossorigin="anonymous" rel="stylesheet">
-    {% load static %}
+    <script src="{% static 'notifications/notify.js' %}" type="text/javascript"></script>
+    {% register_notify_callbacks refresh_period='1' callbacks='fill_notification_badge' %}
     <style>
         .nav-search-form {
             width: 450px !important;
@@ -72,14 +74,19 @@
                             </ul>
                         </li>
                         {% if request.session.guest is 0 or user.is_superuser %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'mainApp:logout' %}">Logout</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'mainApp:inbox' %}" id="notification-btn">
-                                <i class="fas fa-bell"></i><span class="notification-amount" name="notification-amount">5</span>
-                            </a>
-                        </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'mainApp:logout' %}">Logout</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'mainApp:inbox' %}" id="notification-btn">
+                                    <i class="fas fa-bell"></i><span class="notification-amount" name="notification-amount" id="notification-amount"> {% notifications_unread %}</span>
+                                </a>
+                            </li>
+                            <script>
+                                setInterval(function(){
+                                    $('.notification-amount').html("{% notifications_unread %}");
+                                }, 1000);
+                            </script>                        
                         {% endif %}
                         {% if request.session.guest is 1 %}
                         <li class="nav-item">
@@ -118,3 +125,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
