--- a/ariExpressDjango/mainApp/templates/addNewPurchasePolicy.html
+++ b/ariExpressDjango/mainApp/templates/addNewPurchasePolicy.html
@@ -80,6 +80,7 @@
 					<select class="form-select mb-3" aria-label="Default select example" name="ruleType">
 						<option selected disabled>Rule Type</option>
 						<option value="alcohol_restriction">Alcohol Restriction</option>
+						<option value="amount_of_product">amount_of_product</option>
 					</select>
 					<div class="form-floating mb-3">
 						<input type="text" class="form-control" id="floatingInput" name="ruleProductName">
@@ -127,6 +128,10 @@
 					<div class="form-check form-check-inline mb-3">
 						<input class="form-check-input" type="radio" name="logicRadioOptions" id="inlineRadio3" value="AND">
 						<label class="form-check-label" for="inlineRadio3">AND</label>
+					</div>
+					<div class="form-check form-check-inline mb-3">
+						<input class="form-check-input" type="radio" name="logicRadioOptions" id="inlineRadio3" value="">
+						<label class="form-check-label" for="inlineRadio3">None</label>
 					</div>
 					<br>
 					<div class="d-flex justify-content-start">
