--- a/ariExpressDjango/mainApp/templates/store_specific.html
+++ b/ariExpressDjango/mainApp/templates/store_specific.html
@@ -37,6 +37,7 @@ button.addtocart-btn:hover , button.addtocart-btn:active{
 <body>
     <h1 class="specialh1" style="text-align:center; font-size:300%;">{{ storename }} - {{ active }}</h1>
     <br><br>
+    <p>{{products}}</p>
     <div class="row justify-content-lg-center">
       <div class="col-xl-10">
         <table class="table table-hover">
